force-app/main/default/objects/Stripe_Transaction__c/Stripe_Transaction__c.object-meta.xml
<CustomObject>
    <description>Custom object to handle credit card transaction data</description>
    <label>Stripe Transaction</label>
    <nameField>
        <label>Stripe Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stripe Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>