force-app/main/default/objects/Stripe_Transaction__c/fields/Stripe_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Amount_Due__c</fullName>
    <label>Stripe Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>