force-app/main/default/objects/Stripe_Transaction__c/fields/Stripe_Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Attempt_Count__c</fullName>
    <label>Stripe Attempt Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>