force-app/main/default/objects/Stripe_Transaction__c/fields/Stripe_Brand__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Brand__c</fullName>
    <label>Stripe Brand</label>
    <length>50</length>
    <type>Text</type>
</CustomField>