force-app/main/default/objects/Stripe_Transaction__c/fields/Stripe_Charge_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Charge_ID__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Charge ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>