force-app/main/default/objects/Stripe_Transaction__c/fields/Stripe_Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Charge_Type__c</fullName>
    <label>Stripe Charge Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>