force-app/main/default/objects/Stripe_Transaction__c/fields/Stripe_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_Email__c</fullName>
    <label>Stripe Customer Email</label>
    <type>Email</type>
</CustomField>