force-app/main/default/objects/Stripe_Transaction__c/fields/Stripe_Failure_Code__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Failure_Code__c</fullName>
    <label>Stripe Failure Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>