force-app/main/default/objects/Stripe_Transaction__c/fields/Stripe_Failure_Message__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Failure_Message__c</fullName>
    <label>Stripe Failure Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>