force-app/main/default/objects/Stripe_Transaction__c/fields/Stripe_Funding__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Funding__c</fullName>
    <label>Stripe Funding</label>
    <length>50</length>
    <type>Text</type>
</CustomField>