force-app/main/default/objects/Stripe_Transaction__c/fields/Stripe_Reason__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Reason__c</fullName>
    <label>Stripe Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>